# opencv_template

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: main.cpp
src/: main.cpp
